--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
   "name": "my-electron-app",
-  "version": "1.0.0",
-  "description": "Hello World!",
-  "main": "main.js",
+  "version": "1.1.0",
+  "description": "A simple Electron application",
+  "main": "src/main.js",
   "scripts": {
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build:css": "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch"
+    "build:css": "npx @tailwindcss/cli -i ./public/input.css -o ./public/output.css --watch",
+    "build": "webpack"
   },
-  "author": "Jane Doe",
-  "license": "MIT",
   "devDependencies": {
     "electron": "^34.0.1",
     "@tailwindcss/cli": "^4.0.0",
     "tailwindcss": "^4.0.0"
-  }
+  },
+  "keywords": [
+    "electron",
+    "tailwindcss"
+  ],
+  "author": "R1sque",
+  "license": "MIT"
 }
