--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:css": "npx @tailwindcss/cli -i ./public/input.css -o ./public/output.css --watch",
-    "build": "webpack"
+    "build": "electron-builder"
+  },
+  "build": {
+    "appId": "com.mycompany.myapp",
+    "win": {
+      "target": "nsis"
+    }
   },
   "devDependencies": {
     "electron": "^34.0.1",
