--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     }
   },
   "devDependencies": {
-    "electron": "^34.0.1",
     "@tailwindcss/cli": "^4.0.0",
+    "electron": "^34.0.1",
     "tailwindcss": "^4.0.0"
   },
   "keywords": [
@@ -25,5 +25,9 @@
     "tailwindcss"
   ],
   "author": "R1sque",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "minecraft-launcher-core": "^3.18.2",
+    "msmc": "^5.0.5"
+  }
 }
