--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "my-electron-app",
-  "version": "1.1.5",
+  "version": "1.2.1",
   "description": "A simple Electron application",
   "main": "src/main.js",
   "scripts": {
@@ -11,23 +11,33 @@
   },
   "build": {
     "appId": "com.mycompany.myapp",
+    "files": [
+      "**/*",
+      "!.minecraft"
+    ],
     "win": {
-      "target": "nsis"
+      "target": [
+        "portable",
+        "nsis"
+      ]
     }
   },
   "devDependencies": {
     "@tailwindcss/cli": "^4.0.0",
     "electron": "^34.0.1",
-    "tailwindcss": "^4.0.0"
+    "tailwindcss": "^4.0.0",
+    "electron-builder": "^25.1.8",
+    "minecraft-launcher-core": "^3.18.2",
+    "msmc": "^5.0.5"
+  },
+  "dependencies": {
+    "minecraft-launcher-core": "^3.18.2",
+    "msmc": "^5.0.5"
   },
   "keywords": [
     "electron",
     "tailwindcss"
   ],
   "author": "R1sque",
-  "license": "MIT",
-  "dependencies": {
-    "minecraft-launcher-core": "^3.18.2",
-    "msmc": "^5.0.5"
-  }
+  "license": "MIT"
 }
