--- a/package.json
+++ b/package.json
@@ -11,10 +11,6 @@
   },
   "build": {
     "appId": "com.mycompany.myapp",
-    "files": [
-      "**/*",
-      "!.minecraft"
-    ],
     "win": {
       "target": [
         "portable",
@@ -24,12 +20,12 @@
     }
   },
   "devDependencies": {
-    "@tailwindcss/cli": "^4.0.0",
-    "electron": "^34.0.1",
-    "tailwindcss": "^4.0.0",
+    "@tailwindcss/cli": "^4.0.3",
+    "electron": "^34.0.2",
     "electron-builder": "^25.1.8",
     "minecraft-launcher-core": "^3.18.2",
-    "msmc": "^5.0.5"
+    "msmc": "^5.0.5",
+    "tailwindcss": "^4.0.3"
   },
   "dependencies": {
     "minecraft-launcher-core": "^3.18.2",
