--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-electron-app",
-  "version": "1.2.1",
-  "description": "A simple Electron application",
+  "name": "proton-launcher",
+  "version": "1.2.5",
+  "description": "Proton Launcher for Minecraft using Electronjs and Tailwincss",
   "main": "src/main.js",
   "scripts": {
     "start": "electron .",
@@ -10,7 +10,11 @@
     "build": "electron-builder"
   },
   "build": {
-    "appId": "com.mycompany.myapp",
+    "productName": "Proton Launcher",
+    "files": [
+      "**/*",
+      "build/favicon.ico"
+    ],
     "win": {
       "target": [
         "portable",
